[package]
name = "nautilus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core functionality extracted from NautilusTrader"

[lib]
name = "nautilus_core"
crate-type = ["rlib", "staticlib"]

[features]
default = []
extension-module = ["python", "pyo3/extension-module"]
ffi = ["cbindgen"]
python = ["pyo3", "pyo3-stub-gen", "strum"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
heck = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rmp-serde = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ustr = { workspace = true }
uuid = { workspace = true }

pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }
strum = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true, optional = true }
toml = { workspace = true }
