[package]
name = "nautilus-cryptography"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cryptographic primitives extracted from NautilusTrader"

[lib]
name = "nautilus_cryptography"
crate-type = ["rlib", "staticlib"]

[features]
default = []
extension-module = [
  "python",
  "pyo3/extension-module",
]
python = ["pyo3"]

[dependencies]
anyhow = { workspace = true }
aws-lc-rs = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
pem = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }

pyo3 = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
