[package]
name = "nautilus-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Domain model extracted from NautilusTrader"

[lib]
name = "nautilus_model"
crate-type = ["rlib", "staticlib"]

[features]
default = []
extension-module = [
  "nautilus-core/extension-module",
  "python",
  "pyo3/extension-module",
]
ffi = ["cbindgen", "nautilus-core/ffi"]
python = ["nautilus-core/python", "pyo3", "pyo3-stub-gen"]
defi = []
stubs = ["rstest"]
high-precision = []

[dependencies]
nautilus-core = { workspace = true }

ahash = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
enum_dispatch = { workspace = true }
evalexpr = { workspace = true }
hex = { workspace = true }
implied-vol = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tabled = { workspace = true }
thiserror = { workspace = true }
ustr = { workspace = true }

pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }
rstest = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true, optional = true }
