[package]
name = "nexuscore-pyo3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PyO3 bindings for nexuscore cryptography"

[lib]
name = "nexuscore_pyo3"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module", "nautilus-cryptography/extension-module"]

[dependencies]
nautilus-cryptography = { workspace = true, features = ["python"] }
pyo3 = { workspace = true }
